--- a/Source/Moq.Analyzers.Test/PackageTests.Baseline#manifest.verified.nuspec
+++ b/Source/Moq.Analyzers.Test/PackageTests.Baseline#manifest.verified.nuspec
@@ -3,6 +3,7 @@
     <id>Moq.Analyzers</id>
     <version>********</version>
     <authors>Andrey "Litee" Lipatkin</authors>
+    <developmentDependency>true</developmentDependency>
     <license type="expression">BSD-3-Clause</license>
     <licenseUrl>https://licenses.nuget.org/BSD-3-Clause</licenseUrl>
     <readme>README.md</readme>
