--- a/Source/Moq.Analyzers/Moq.Analyzers.csproj
+++ b/Source/Moq.Analyzers/Moq.Analyzers.csproj
@@ -18,7 +18,7 @@
     <Description>Roslyn analyzer that helps to write unit tests using Moq mocking library by highlighting typical errors and suggesting quick fixes. Port of Resharper extension to Roslyn. Find the full list of detected issues at project GitHub page.</Description>
     <PackageReleaseNotes>Upgraded to support Visual Studio 2019</PackageReleaseNotes>
     <Copyright>2017 Andrey Lipatkin</Copyright>
-    <PackageTags>moq, mock, test, analyzers</PackageTags>
+    <PackageTags>moq, tdd, mocking, mocks, unittesting, agile, unittest, mock, test, analyzers</PackageTags>
     <DevelopmentDependency>true</DevelopmentDependency> 
   </PropertyGroup>
 
