--- a/Source/Moq.Analyzers/Moq.Analyzers.csproj
+++ b/Source/Moq.Analyzers/Moq.Analyzers.csproj
@@ -10,15 +10,15 @@
 
   <PropertyGroup Label="Package metadata">
     <PackageId>Moq.Analyzers</PackageId>
-    <Authors>Andrey "Litee" Lipatkin</Authors>
+    <Authors>Matt Kotsenas, Andrey "Litee" Lipatkin, Richard Murillo</Authors>
     <PackageLicenseExpression>BSD-3-Clause</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/Litee/moq.analyzers</PackageProjectUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <Description>Roslyn analyzer that helps to write unit tests using Moq mocking library by highlighting typical errors and suggesting quick fixes. Port of Resharper extension to Roslyn. Find the full list of detected issues at project GitHub page.</Description>
-    <PackageReleaseNotes>Upgraded to support Visual Studio 2019</PackageReleaseNotes>
-    <Copyright>2015-2019 Andrey Lipatkin</Copyright>
-    <PackageTags>moq, mock, test, analyzers</PackageTags>
+    <PackageReleaseNotes>A changelog is available at https://github.com/Litee/moq.analyzers/releases</PackageReleaseNotes>
+    <Copyright>2017 Andrey Lipatkin</Copyright>
+    <PackageTags>moq, tdd, mocking, mocks, unittesting, agile, unittest, mock, test, analyzers</PackageTags>
     <DevelopmentDependency>true</DevelopmentDependency> 
   </PropertyGroup>
 
