--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,11 +3,10 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
-
   <Import Project="build/targets/reproducible/Packages.props" />
-
   <ItemGroup>
     <PackageVersion Include="GetPackFromProject" Version="1.0.6" />
+    <PackageVersion Include="Meziantou.Analyzer" Version="2.0.155" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="2.9.3" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="2.6.1" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
