--- a/.editorconfig
+++ b/.editorconfig
@@ -184,6 +184,9 @@ csharp_space_between_square_brackets = false
 csharp_preserve_single_line_blocks = true
 csharp_preserve_single_line_statements = true
 
+# Async analyzer
+dotnet_diagnostic.CA2016.severity = error
+
 #### Naming styles ####
 [*.{cs,vb}]
 
@@ -374,4 +377,3 @@ dotnet_naming_style.s_camelcase.required_prefix = s_
 dotnet_naming_style.s_camelcase.required_suffix =
 dotnet_naming_style.s_camelcase.word_separator =
 dotnet_naming_style.s_camelcase.capitalization = camel_case
-
